# cpp_unittest

./: .gitignore  CMakeLists.txt  main.cpp  validator.cpp
src/: CMakeLists.txt
src/detector/: detected_placeholder.cpp  detected_placeholder.h  url_detector.cpp  url_detector.h
src/validators/: validator.cpp  validator.h
tests/: CMakeLists.txt  test.cpp
tests/unittests/: CMakeLists.txt
tests/unittests/detector/: detector.cpp
tests/unittests/validators/: validator.cpp  validator_fixture.cpp
